[package]
name = "trans"
version = "0.1.0"
authors = ["daiymgyl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
errno = "0.3.8"
rdma-sys = "0.3.0"
doca-sys = { path = "../doca-sys", package = "doca-sys", version = "0.1.0" }
ll_alloc = { path = "../linked_list_allocator", package = "linked_list_allocator", version = "0.10.5" }