[package]
name = "trans"
version = "0.1.0"
authors = ["daiymgyl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
doca = ["doca-sys"]


[dependencies]
libc        = "0.2"
byte_struct = "0.9.0"
errno       = "0.3.8"
tokio       = { version = "=1.29.1", features = ["full"] }
# lever       = "0.1.4"
rdma-sys    = "0.3.0"
lazy_static = { version = "1.4.0"}
ll_alloc    = { path = "../linked_list_allocator", package = "linked_list_allocator", version = "0.10.5" }
doca-sys    = { path = "../doca-sys", package = "doca-sys", version = "0.1.0", optional = true}
