[package]
name = "trans"
version = "0.1.0"
authors = ["daiymgyl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["doca_deps"]
doca_deps = ["serde_derive", "doca", "doca-sys"]
debug = []

[dependencies]
libc         = "0.2"
byte_struct  = "0.9.0"
errno        = "0.3.8"
clap         = "3.2.19"
log          = "0.4.0"
log4rs       = "1.0.0"
ctrlc        = "3.2.3"
rand         = "0.8.4"
serde        = "1.0.144"
serde_derive = { version = "1.0.144", optional = true }
serde_json   = "1.0.85"
tokio        = { version = "=1.29.1", features = ["full"] }
# lever       = "0.1.4"
rdma-sys     = { path = "../deps/rdma-sys",  package = "rdma-sys", version = "0.3.0" }
lazy_static  = { version = "1.4.0"}
ll_alloc     = { path = "../deps/linked_list_allocator", package = "linked_list_allocator", version = "0.10.5" }
doca         = { path = "../deps/doca", package = "doca", version = "0.1.0", optional = true}
doca-sys     = { path = "../deps/doca-sys", package = "doca-sys", version = "0.1.0", optional = true}